--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Alura - Plus</title>
     <link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
-
 <body>
-
-
+    <section class="container principal">
+		<div class="container__caixa">
+			<h1 id="tituloPrincipal">Com o Combo+, você pode aproveitar a Alura Língua por um preço único.</h1>
+			<img class="container__image"src="img/Combo.png" alt="O combo+ e a juncao alura e o aluro Lingua">
+			<a class="container__botao" href="www.alura.com.br">Assine por 12x de $ 120,0</a>
+			<a class="container__botao botao__secundario" href="www.alura.com.br">Assinar somente o Alura+</a>
+			<p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
+		</div>
+	</section>
 </body>
-
 </html>
