--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
 			<p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
 		</div>
 	</section>
+    <section class="container secundario">
+		<img class="secundario__image" src="img/Plataformas.png" alt="Assista do seu jeito">
+		<div class="container__descricao">
+			<h2 class="descricao__titulo">Assista do seu jeito </h2>
+			<p class="descricao__texto">Aproveite a tela da TV ou assista no tablet, aparelhos. 
+			Nossa seleção de cursos não para de crescer</p>
+		</div>
+	</section>
 </body>
 </html>
