--- a/index.html
+++ b/index.html
@@ -34,5 +34,12 @@
 		</div>
 		<img src="img/Telas.png" alt="Tela do alura plus e alura lingua" class="secundario__image">
 	</section>
+    <section class="container secundario">
+		<img src="img/Notebook.png" class="secundario__image"  alt="baixe seus cursos e assista seus filmes favoritos">
+		<div class="container__descricao">
+			<h2 class="descricao__titulo">Baixe seus cursos</h2>
+			<p class="container__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+		</div>
+	</section>
 </body>
 </html>
